# rust-weather

./: Cargo.toml
.cargo/: config.toml
